--- a/styles/giftcard.css
+++ b/styles/giftcard.css
@@ -22,7 +22,7 @@ html {
    
   }
   
-  .navigation1 {
+  .navigation {
     width: 100%;
     background-color: white;
     display: flex;
@@ -42,7 +42,7 @@ html {
     display: flex;
   }
   
-  .navi-1-1 {
+  .navi-1 {
     height: 100%;
     width: 35%;
     text-decoration: none;
@@ -59,23 +59,23 @@ html {
     list-style-type: none;
   }
   
-  .arr {
+  .ar {
     color: black;
     text-decoration: none;
   }
   
-  .arr {
+  .ar {
     text-decoration: none;
     padding: 20px 30px;
   }
   
-  .arr:hover {
+  .ar:hover {
     background-color: black;
     color: white;
     padding: 20px 30px;
   }
   
-  .navi-2-2{
+  .navi-2 {
     height: 100%;
     width: 58%;
     display: flex;
@@ -106,7 +106,7 @@ html {
   }
   
   
-  .buttonn{
+  .button{
     height: 70%;
     width: 80%;
     display:flex;
@@ -124,7 +124,7 @@ html {
   
   
   
-  .signinn {
+  .signin {
     color: black;
     background-color: white;
   }
@@ -138,10 +138,262 @@ html {
     margin-top: 17px;
     padding-left: 20px;
   }
+  
+  
+  *,
+  *::before,
+  *::after { 
+    box-sizing: border-box;
+  }
+  
+  html {
+    background-color: #f0f0f0;
+  }
+  
+  body {
+    color:  #999999;
+    font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    padding: 1rem;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -moz-font-feature-settings: "liga" on;
+  }
+  
+  img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
+  }
+  
+  .btn {
+    background-color: white;
+    border: 1px solid #cccccc;
+     border-radius: 1rem;
+    color:#696969;
+    padding: 0.5rem;
+    text-transform: lowercase;
+  }
+  
+  .btn--block {
+    display: block;
+    width: 100%;
+  }
+   
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .cards__item {
+    display: flex;
+    padding: 1rem;
+    @media(min-width: 40rem) {
+      width: 50%;
+    }
+    @media(min-width: 56rem) {
+      width: 33.3333%;
+    }
+  }
+  
+  .card {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    &:hover {
+      .card__image {
+        filter: contrast(100%);
+      }
+    }
+  }
+  
+  .card__content {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    padding: 1rem;
+  }
+  
+  .card__image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    filter: contrast(70%);
+  filter: saturate(180%);
+    overflow: hidden;
+    position: relative;
+    transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);;
+    &::before {
+      content: "";
+      display: block;
+      padding-top: 56.25%; 
+    }
+    @media(min-width: 40rem) {
+      &::before {
+        padding-top: 66.6%; 
+      }
+    }
+  }
+  
+  .card__image--flowers {
+    background-image: url(https://unsplash.it/800/600?image=82);
+  }
+  
+  .card__image--river {
+    background-image: url(https://unsplash.it/800/600?image=11);
+  }
+  
+  .card__image--record {
+    background-image: url(https://unsplash.it/800/600?image=39);
+  }
+  
+  .card__image--fence {
+    background-image: url(https://unsplash.it/800/600?image=59);
+  }
+  
+  .card__title {
+    color:  #696969;
+    font-size: 1.25rem;
+    font-weight: 300;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+  
+  .card__text {
+    flex: 1 1 auto;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    margin-bottom: 1.25rem;
+  }
 
-  .row{
+
+  .navigation {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    padding: 10px 30px;
+    box-shadow: 0 1px 3px rgba(0,0,0,.1), 0 2px 2px rgba(0,0,0,.06), 0 0 2px rgba(0,0,0,.07);
+    font-weight: 700;
+  }
+  
+  .symbol {
+    margin-left: 2%;
+    width: 5%;
+    padding-top: 10px;
+    height: 50px;
+    background-image: url(https://i.pinimg.com/564x/14/55/09/145509e2e7c55b7ab8830545895b70c9.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
     display: flex;
   }
   
-
-
+  .navi-1 {
+    height: 100%;
+    width: 35%;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 14px;
+    text-transform: uppercase;
+    margin-left: 2%;
+    font-size: 14px;
+  }
+  
+  ul {
+    gap: 10px;
+    display: flex;
+    list-style-type: none;
+  }
+  
+  .ar {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .ar {
+    text-decoration: none;
+    padding: 20px 30px;
+  }
+  
+  .ar:hover {
+    background-color: black;
+    color: white;
+    padding: 20px 30px;
+  }
+  
+  .navi-2 {
+    height: 100%;
+    width: 58%;
+    display: flex;
+    justify-content: right;
+  }
+  
+  
+  ul {
+    gap: 10px;
+    display: flex;
+    list-style-type: none;
+  }
+  
+  .ar {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .ar {
+    text-decoration: none;
+    padding: 20px 30px;
+  }
+  
+  .ar:hover {
+    background-color: black;
+    color: white;
+    padding: 20px 30px;
+  }
+  
+  
+  .button{
+    height: 70%;
+    width: 80%;
+    display:flex;
+    padding-left: 45%;
+    padding-top: 9px;
+    gap: 40px;
+  }
+  
+  button{
+    padding: 5px 1.5em;
+    border-radius: 100px;
+    text-align: center;
+  }
+  
+  
+  
+  
+  .signin {
+    color: black;
+    background-color: white;
+  }
+  .store {
+    height: 100%;
+    width: 20%;
+  }
+  .fa-solid {
+    font-size: 20px;
+    color: black;
+    margin-top: 17px;
+    padding-left: 20px;
+  }
+  
+  
+  
