--- a/styles/preferences.css
+++ b/styles/preferences.css
@@ -172,7 +172,7 @@ button {
   display: flex;
 }
 
-#img-product {
+.img-product {
   height: 40vh;
 
 }
@@ -220,14 +220,14 @@ ul {
 }
 
 .tabs {
-  width: 850px;
-  margin-top: 30px;
+  margin-top: 40px;
+  width:auto
 
 }
 
 .tabs .tabs--list {
   display: block;
-  margin-left: 200px;
+  margin: 0 auto;
   position: relative;
   background-color: #e9e9e9;
   border-radius: 8px;
@@ -290,7 +290,9 @@ ul {
 .tabs .tabs--content {
   text-align: center;
   padding: 35px 25px;
-  margin-left: 302px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .tabs .tabs--content li {
@@ -327,7 +329,7 @@ ul {
 .size-option {
   margin-top: 9px;
   width: 243px;
-  margin-left: 227px;
+  margin: 0 auto;
   background-color: rgb(212, 233, 226);
   height: 4px;
   border: transparent;
@@ -345,11 +347,10 @@ ul {
 
 p {
   font-weight: 530;
-  margin-left: -42px;
 }
 
 .title-size{
-  margin-left: -69px;
+  text-align: center;
 }
 
 
