--- a/styles/delivery.css
+++ b/styles/delivery.css
@@ -6,6 +6,21 @@
   font-family: "Nunito", sans-serif;
 }
 
+video::-webkit-media-controls {
+  display: none;
+}
+
+/* Could Use thise as well for Individual Controls */
+video::-webkit-media-controls-play-button {}
+
+video::-webkit-media-controls-volume-slider {}
+
+video::-webkit-media-controls-mute-button {}
+
+video::-webkit-media-controls-timeline {}
+
+video::-webkit-media-controls-current-time-display {}
+
 html {
   scroll-behavior: smooth;
 }
@@ -447,23 +462,18 @@ header .search svg {
 }
 
 
-.fixed-image {
-  height: 100%;
-  width: 40vw;
-  background-image: url(https://www.starbucks.co.uk/sites/starbucks-uk/files/styles/c01_vertical_card_724x1009/public/2020-08/Starbucks_Delivers.png.webp?itok=Z-W0Hxn0);
-  background-size: cover;
-  display: block;
-
-}
 
 .right {
-  height: 100%;
-  width: 60%
+  height: 80%;
+  width: 100%
 }
 
 .right-fixed-image {
-  height: fit-content;
-  width: 100%;
+background-image: url(https://card.starbucks.vn/static/media/bg-login-full.8385e597.png);
+background-size: cover;
+background-repeat: no-repeat;
+height: 40vh;
+width: 100vw;
 
 }
 
@@ -480,7 +490,7 @@ header .search svg {
 
 .step-deliver {
   height: 70%;
-  width: 100%;
+  width: 50%;
   display: flex;
 }
 
@@ -488,12 +498,15 @@ header .search svg {
   height: 100%;
   width: 32.5%;
   margin-top: 50px;
+
 }
 
 .step1-img {
   height: fit-content;
   width: 100%;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
 
 
 }
@@ -503,10 +516,13 @@ header .search svg {
   transition: transform 0.2s ease-in-out;
 }
 
-.page-2{
+.step2{
+  width: 50%;
+}
+.bottom-deliver{
+  display: flex;
+  height: 50vh;
   width: 100vw;
-  height: 100vh;
-  background-color: #1c222b;
 }
 
 .footer {
@@ -788,7 +804,6 @@ header .search svg {
 .delivery-img {
   width: 76px;
   height: 77px;
-  margin-left: 82px;
 }
 
 .step1-title {
