--- a/styles/home.css
+++ b/styles/home.css
@@ -11,6 +11,11 @@
   
   body::-webkit-scrollbar {
     display: none;
+   
+  }
+
+  .container-all{
+    background-color:#FAF6EE;
   }
   
   .container-1 {
@@ -110,11 +115,21 @@
   }
   
   .container-2 {
+    width: 33vw;
     height: 100vh;
-    width: 100vw;
-    background-size: cover;
-    background-image: url(/image/Simple\ Red\ and\ Beige\ Vintage\ Illustration\ History\ Report\ Presentation.jpg);
+    margin-left: 10vw;
   }
+
+  .swiper-right{
+    width: 33vw;
+    height: 90vh;
+    background-color: black;
+  }
+
+.title2{
+  height: 15vh;
+  width: 100%;
+}  
   
   
   .page-1 {
@@ -713,6 +728,7 @@
   .swiper {
     width: 100%;
     height: 100%;
+    margin-top: 60px;
   }
   
   .swiper-slide {
@@ -728,5 +744,5 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
