--- a/styles/signin.css
+++ b/styles/signin.css
@@ -23,8 +23,9 @@ body {
     align-items: center;
     height: 100vh;
     margin: -20px 0 50px;
-    background-image: url(https://images.unsplash.com/photo-1500993855538-c6a99f437aa7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
-    background-size: cover;
+    background-image: url(https://i.pinimg.com/564x/81/17/b7/8117b784c6f65b5c66ef8683e96561f4.jpg);
+    background-size: contain;
+    backdrop-filter: blur(3px);
 }
 
 h1 {
