--- a/styles/card_detail.css
+++ b/styles/card_detail.css
@@ -141,234 +141,59 @@
   }
   
   
-  .page-1 {
-    width: 100vw;
-    
-  }
-  
-  .option {
-    width: 100vw;
-    display: flex;
-    margin-top: 40px;
-  
-  }
-  
-  .title-product {
-    height: 100%;
-    width: 50%;
-    margin-left: 106px;
-    color: white;
-    text-align: center;
-    padding-top: 97px;
-    font-size: 27px;
-    font-weight: 500;
-  }
-  
-  .product {
-    width: 100vw;
-    height: 40vh;
-    background-color: rgb(31, 57, 51);
-    padding-left: 178px;
-    display: flex;
-  }
-  
-  .img-product {
-    height: 40vh;
-  
-  }
-  
-  
-  @-webkit-keyframes movingTab {
-    0% {
-      transform: translateX(0%);
-    }
-  
-    50% {
-      transform: translateX(-10%);
-    }
-  
-    100% {
-      transform: translateX(0%);
-    }
-  }
-  
-  @keyframes movingTab {
-    0% {
-      transform: translateX(0%);
-    }
-  
-    50% {
-      transform: translateX(-10%);
-    }
-  
-    100% {
-      transform: translateX(0%);
-    }
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  main {
-    margin: 50px;
-  }
-  
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .tabs {
-    margin-top: 40px;
-    width:auto
-  
-  }
-  
-  .tabs .tabs--list {
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    background-color: #e9e9e9;
-    border-radius: 8px;
-    width: 314px;
-  }
-  
-  .tabs .tabs--list li {
-    display: inline-block;
-    vertical-align: middle;
-    width: 32%;
-    position: relative;
-    z-index: 2;
-  }
-  
-  .tabs .tabs--list li a {
-    display: block;
-    padding: 15px 0 19px;
-    font-size: 18px;
-    line-height: 26px;
-    color: #636363;
-    transition: color ease 0.7s, box-shadow 0.5s;
-    text-align: center;
-  }
-  
-  .tabs .tabs--list li a.actived {
-    color: #ffffff;
-  }
-  
-  .tabs .tabs--list li a.actived:hover {
-    box-shadow: none;
-  }
-  
-  .tabs .tabs--list li a:hover {
-    box-shadow: 0 24px 18px -15px rgba(0, 0, 0, 0.09);
-  }
-  
-  .tabs .tabs--list li.moving-tab {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 110%;
-    top: -5%;
-    background-color: #753c94;
-    box-shadow: 0 24px 18px -15px rgba(117, 60, 148, 0.45);
-    transition: left 0.7s, box-shadow 0.5s;
-    z-index: 1;
-    border-radius: 8px;
-  }
-  
-  .tabs .tabs--list li.moving-tab:hover {
-    box-shadow: 0 24px 18px -15px rgba(117, 60, 148, 0.65);
-  }
-  
-  .tabs .tabs--list li.moving-tab--interaction {
-    animation: movingTab 0.4s forwards;
-    transition: left 0.4s cubic-bezier(0.29, 1.42, 0.79, 1);
-  }
-  
-  .tabs .tabs--content {
-    text-align: center;
-    padding: 35px 25px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .tabs .tabs--content li {
-    display: none;
-  }
-  
-  .tabs .tabs--content li.actived {
-    display: block;
-  }
-  
-  
-  .box{
-    width: 50%;
-    height: 40vh ;
-  }
-  
-  
-  .cup1 {
-    font-size: 17px;
-  }
-  
-  .cup2 {
-    font-size: 23px;
-  }
-  
-  .cup3 {
-    font-size: 32px;
-  }
-  
-  .size-title {
-    text-align: center;
-  }
-  
-  .size-option {
-    margin-top: 9px;
-    width: 243px;
-    margin: 0 auto;
-    background-color: rgb(212, 233, 226);
-    height: 4px;
-    border: transparent;
-  }
-  
-  
-  .activated{
-    font-weight: 600;
-  }
-  .under-size{
-    margin-left: 2px;
-    font-size: 15px;
-    font-weight: 300;
-  }
-  
-  p {
-    font-weight: 530;
-  }
-  
-  .title-size{
-    text-align: center;
-  }
-  
-  
-  .product-footer {
-    width: 100vw;
-    height: 30vh;
-    background-color: rgb(31, 57, 51);
-  }
-  form{
-    padding-left: 226px;
-    padding-top: 29px;
-  }
-  .gap-select{
-    margin-top: 20px;
-  }
-  select{
-    width: 200px;
-    height: 30px;
-    border-radius: 10px;
-  }
-  
+.page-1 {
+  height: 100vh;
+  width: 100vw;
+}
+
+.title1{
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text{
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.card{
+  height:40%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inner-card{
+  height: 83%;
+  width: 24%;
+  border-radius: 7px;
+  background-size: contain;
+  background-image: url(https://globalassets.starbucks.com/digitalassets/cards/fy20/BrailleFY20.jpg);
+}
+
+.title-option{
+  text-align: center;
+  margin-top: 20px;
+}
+
+hr{
+  margin-top: 9px;
+  width: 243px;
+  margin: 0 auto;
+  background-color: rgb(212, 233, 226);
+  height: 4px;
+  border: transparent;
+}
+
+.form{
+  display: flex;
+  justify-content: center;
+}
+
+.input{
+  margin-top: 20px;
+}
