--- a/styles/giftcard.css
+++ b/styles/giftcard.css
@@ -277,3 +277,286 @@ button {
   background-color: black;
   color: white;
 }
+
+
+.footer {
+  width: 100vw;
+  background-color: #f7f7f7;
+  border-top: solid 1px #1c222b;
+  margin-top: 40px;
+}
+
+.footer-line {
+  height: 10vh;
+  width: 100vw;
+  display: flex;
+  border-top: solid 1px #1c222b;
+  background-color: white;
+  color: black;
+}
+
+
+.line-right {
+  height: 100%;
+  width: 50%;
+  padding-left: 60px;
+  font-size: 13px;
+  padding-top: 18px;
+}
+
+.line-left {
+  height: 100%;
+  width: 50%;
+  padding-top: 15px;
+  padding-right: 80px;
+  font-size: 16px;
+  display: flex;
+  justify-content: right;
+  gap: 30px;
+}
+
+.footer-apps {
+  display: flex;
+  gap: 40px;
+}
+
+.fa-twitter {
+  color: black;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.fa-instagram {
+  color: black;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.fa-facebook {
+  color: black;
+  font-size: 30px;
+  padding: 20px 20px 20px 0;
+}
+
+.footer-main {
+  height: 50vh;
+  width: 100vw;
+  background-color: white;
+  gap: 10px;
+  padding: 50px 20px;
+}
+
+
+.container-col {
+  display: flex;
+  height: 60%;
+  width: 100%;
+  gap: 20px;
+  padding: 0px 40px;
+}
+
+.p {
+  margin-top: 13px;
+}
+
+.col-title {
+  color: black;
+  font-weight: 700;
+}
+
+.col-text {
+  margin-top: 26px;
+  color: black;
+
+}
+
+.col {
+  height: 100%;
+  width: 25%;
+}
+
+
+
+.footer-starbuck {
+  height: 40%;
+  width: 25%;
+  padding: 42px;
+  margin-top: 18px;
+}
+
+.footer-title {
+  height: 5%;
+  width: 100%;
+  font-size: 25px;
+  font-weight: 600;
+  color: black;
+  padding-left: 15px;
+  margin-bottom: 30px;
+}
+
+.footer-col-1 {
+  height: 100%;
+  width: 36%;
+}
+
+.footer-main1-box1 {
+  height: 7%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-icon {
+  height: 100%;
+  width: 13%;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.bi-geo-alt-fill {
+  padding-top: 5px;
+}
+
+.bi-telephone-fill {
+  padding-top: 10px;
+}
+
+.bi-envelope {
+  padding-top: 10px;
+}
+
+.footer-main1-infor1 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-main1-box2 {
+  height: 10%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-infor2 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-main1-box3 {
+  height: 7%;
+  width: 100%;
+  display: flex;
+}
+
+.footer-main1-infor3 {
+  height: 100%;
+  width: 70%;
+  font-size: 16px;
+  color: black;
+  padding-top: 5px;
+}
+
+.footer-col-2 {
+  height: 100%;
+  width: 37%;
+}
+
+.footer-main2-box {
+  width: 100%;
+  height: 25%;
+  margin-top: 25px;
+  padding-left: 15px;
+}
+
+.footer-main2-ques {
+  height: 40%;
+  width: 100%;
+  font-size: 17px;
+  font-weight: 600;
+  color: black;
+}
+
+.footer-main2-ans {
+  height: 45%;
+  width: 100%;
+  color: black;
+  font-weight: 400;
+}
+
+.footer-main2-date {
+  height: 10%;
+  width: 100%;
+  color: black;
+}
+
+.footer-col-3 {
+  height: 100%;
+  width: 38%;
+}
+
+.footer-main3-box {
+  width: 100%;
+  height: 27%;
+  margin-top: 25px;
+  padding-left: 15px;
+}
+
+.footer-main3-heading {
+  display: flex;
+  color: black;
+}
+
+.footer-main3-icon {
+  height: 100%;
+  width: 15%;
+  color: black;
+}
+
+.footer-main3-title1 {
+  height: 100%;
+  width: 50%;
+  text-align: center;
+  color: black;
+}
+
+.footer-main3-title2 {
+  height: 100%;
+  width: 30%;
+  color: black;
+}
+
+.footer-main3-text {
+  height: 70%;
+  width: 100%;
+  padding-left: 15%;
+  color: black;
+}
+
+.bi-lightning-charge-fill {
+  color: yellow;
+}
+
+.fade {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade.in {
+  opacity: 1;
+}
+
+.list-drinks {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.drink-item {
+  width: 50%;
+  height: 150px;
+  background-color: aliceblue;
+}
